# carlabev-env

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTEXT.md  README.md  pyproject.toml
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  publish.yml
CarlaBEV/: __init__.py  semantics.py
CarlaBEV/config/: __init__.py  action_profiles.py  difficulty.py  env.py  reset.py  reward_profiles.py
CarlaBEV/docs/: control_and_actions.md  coordinate_conventions.md  downstream_integration_api.md  ego_kinematics.md  geometry_and_metric_frame.md  scenario_specifications.md
CarlaBEV/envs/: RRT_Star.py  __init__.py  bicycle.py  camera.py  carlabev.py  fov.py  geometry.py  grid_world.py  level.py  map.py  pedestrian.py  renderer.py  robot.py  rrt.py  scene.py  spaces.py  test.py  transforms.py  utils.py  vehicle.py  world.py
CarlaBEV/internal/: stage1_simulator_semantics.md
CarlaBEV/scenarios/: __init__.py
CarlaBEV/scripts/: debug_map_graph.ipynb  design_map_graph.ipynb  design_scene.ipynb  load_results.py  result_analysis.ipynb  route_generator.ipynb
CarlaBEV/src/: __init__.py  randomness.py
CarlaBEV/tools/: Scene1.csv  controls.py  debug.py  debug_authored_scenes.py  debug_env.py  get_coords_gui.py  gui.py  lane_graphs.py  scene_designer.py  test_loader.py  validate_simulator_semantics.py  visualize_semantic_channels.py  visualize_vehicle_temporal_fusion.py
CarlaBEV/wrappers/: __init__.py  rgb_to_semantic.py
debug_log/carlabev-debug/: events.out.tfevents.1763213665.v8d1ef686.dip.tu-dresden.de.41661.0  events.out.tfevents.1763214108.v8d1ef686.dip.tu-dresden.de.41860.0  events.out.tfevents.1763215454.v8d1ef686.dip.tu-dresden.de.42644.0  events.out.tfevents.1763215517.v8d1ef686.dip.tu-dresden.de.42696.0  events.out.tfevents.1763215568.v8d1ef686.dip.tu-dresden.de.42712.0  events.out.tfevents.1763216103.v8d1ef686.dip.tu-dresden.de.47553.0  events.out.tfevents.1763216163.v8d1ef686.dip.tu-dresden.de.47607.0  events.out.tfevents.1763216190.v8d1ef686.dip.tu-dresden.de.47623.0  events.out.tfevents.1763216235.v8d1ef686.dip.tu-dresden.de.47641.0  events.out.tfevents.1763216255.v8d1ef686.dip.tu-dresden.de.47655.0  events.out.tfevents.1763216277.v8d1ef686.dip.tu-dresden.de.47669.0  events.out.tfevents.1763216287.v8d1ef686.dip.tu-dresden.de.47683.0  (+5 more)
scripts/: install-git-hooks.sh  setup-hooks.sh
tests/: test_public_config.py  test_route_profile.py  test_seeded_scene_consistency.py
(+138 files in other folders)
