[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["CarlaBEV"]

[project]
name = "CarlaBEV"
version = "0.1.0"
requires-python = ">=3.12" 
dependencies = [
  "gymnasium",
  "pygame>=2.1.3",
  "numpy",
  "pandas",
  "pre-commit",
  "tyro",
  "pillow",
  "scipy",
  "networkx",
  "rich",
  "opencv-python",
  "matplotlib",
  "pydantic>=2",
]

[dependency-groups]
dev = [
  "pytest>=9.0.0",
  "ruff>=0.9.9",
  "pre-commit>=4.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff.lint.per-file-ignores]
"CarlaBEV/tools/scene_designer.py" = ["E402", "F403"]
