[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
artifacts = [
  "CarlaBEV/assets/**/*.json",
  "CarlaBEV/assets/**/*.png",
  "CarlaBEV/assets/**/*.pkl",
  "CarlaBEV/docs/**/*.md",
  "CarlaBEV/internal/**/*.md",
]

[tool.hatch.build.targets.wheel]
packages = ["CarlaBEV"]

[tool.hatch.build.targets.sdist]
include = [
  "/CarlaBEV",
  "/README.md",
  "/tests",
  "/pyproject.toml",
]

[project]
name = "CarlaBEV"
version = "0.1.0"
description = "Bird's-eye-view Gymnasium simulator for autonomous-driving RL research"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "gymnasium",
  "pygame>=2.1.3",
  "numpy",
  "pandas",
  "tyro",
  "pillow",
  "scipy",
  "networkx",
  "rich",
  "opencv-python",
  "matplotlib",
  "pydantic>=2",
]

[project.urls]
Homepage = "https://github.com/danielmtzbarba/carlabev-env"
Repository = "https://github.com/danielmtzbarba/carlabev-env"
Issues = "https://github.com/danielmtzbarba/carlabev-env/issues"

[dependency-groups]
dev = [
  "pytest>=9.0.0",
  "ruff>=0.9.9",
  "pre-commit>=4.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff.lint.per-file-ignores]
"CarlaBEV/tools/scene_designer.py" = ["E402", "F403"]
